Lista de cines dinámica

--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -13,7 +13,7 @@
         <div class="container d-flex">
             <div class="cines">
                 <h1 class="mt-5">Listado de Cines</h1>
-                <div class="d-flex">
+                <!-- <div class="d-flex"> -->
                     <!--<div th:each="cine : ${listaCines}"  class="col">
                         <div class="card h-100">
                         <div class="card-body">
@@ -23,7 +23,18 @@
                         </div>
                         </div>
                     </div>-->
-                    <div class="mad d-flex flex-column mt-5 me-5">
+                    <th:block th:each="ciudad, index : ${listaCiudades}">
+                        <th:block th:if="${index.first || (index.count - 1) % 2 == 0}" th:utext="'&lt;div class=&quot;d-flex&quot;&gt;'"/> 
+                        <div class="d-flex flex-column mt-5 me-5">
+                            <h2 th:text="${ciudad}">Ciudad</h2>
+                            <div th:each="cine : ${listaCines}" th:if="${#strings.toLowerCase(cine.ciudad)==#strings.toLowerCase(ciudad)}" class="cine d-flex align-items-center mt-3">
+                                <img th:src="@{/img/{id}(id=${cine.imagen})}" alt="imagen cine" height="120px" width="84px" class="d-inline-block">
+                                <a th:text="${cine.nombre}" th:href="@{/cines/{id}(id=${cine.id})}" class="ms-2 bold text-dark">Cine</a>
+                            </div> 
+                        </div>
+                        <th:block th:if="${index.last || index.count % 2 == 0}" th:utext="'&lt;/div&gt;'" /> 
+                    </th:block>
+                    <!-- <div class="mad d-flex flex-column mt-5 me-5">
                         <h2>Madrid</h2>
                         <div th:each="cine : ${listaCines}" th:if="${cine.ciudad=='Madrid'}" class="cine d-flex align-items-center mt-3">
                             <img th:src="@{/img/{id}(id=${cine.imagen})}" src="/img/lagavia.jpg" alt="imagen cine" height="120px"
@@ -49,7 +60,7 @@
                             <a th:text="${cine.nombre}" th:href="@{/cines/{id}(id=${cine.id})}" class="ms-2 bold text-dark">Bonaire</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div th:if="${cineInfo!=null}" class="mapa-info ms-5">
                 <div class="d-flex justify-content-center mt-5"><h2 th:text="${cineInfo.nombre}" class="mt-5 titul">La Gavia</h2></div>
