--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -18,7 +18,7 @@
                         <div class="d-flex flex-column mt-5 me-5">
                             <h2 th:text="${ciudad}">Ciudad</h2>
                             <div th:each="cine : ${listaCines}" th:if="${#strings.toLowerCase(cine.ciudad)==#strings.toLowerCase(ciudad)}" class="cine d-flex align-items-center mt-3">
-                                <img th:src="@{/img/{id}(id=${cine.imagen})}" alt="imagen cine" height="120px" width="84px" class="d-inline-block">
+                                <a th:href="@{/cines/{id}(id=${cine.id})}"> <img th:src="@{/img/{id}(id=${cine.imagen})}" alt="imagen cine" height="120px" width="84px" class="d-inline-block"> </a>
                                 <a th:text="${cine.nombre}" th:href="@{/cines/{id}(id=${cine.id})}" class="ms-2 bold text-dark">Cine</a>
                             </div> 
                         </div>
