--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -18,21 +18,16 @@
                 <div class="d-flex flex-row align-items-center mt-5">
                     <select class="form-select w-50" aria-label="Seleccion de Cine">
                         <option selected>Seleccione un cine</option>
-                        <option value="1">Madrid - La Gavia</option>
-                        <option value="2">Madrid - Plaza Rio 2</option>
-                        <option value="3">Barcelona - Barnasud</option>
-                        <option value="4">Barcelona - Diagonal</option>
-                        <option value="5">Valencia - Bonaire</option>
+                        <option th:each="cine : ${cines}" th:text="${cine.ciudad + ' - ' + cine.nombre}"
+                            th:attr="value=#{cine.id}">Madrid - La Gavia</option>
                     </select>
                     <select class="form-select w-25 ms-3" aria-label="Seleccion de Sala" disabled>
                         <option selected>Seleccione una sala</option>
                         <option value="1">Sala 1</option>
                         <option value="2">Sala 2</option>
-                        <option value="3">Sala 3</option>
-                        <option value="4">Sala 4</option>
-                        <option value="5">Sala 5</option>
                     </select>
-                    <input type="date" class="form-control w-25 ms-3" value="2022-03-01" id="fecha" name="fecha" required="required">
+                    <input type="date" class="form-control w-25 ms-3" value="2022-03-01" id="fecha" name="fecha"
+                        required="required">
                     <form class="d-flex w-75 ms-3">
                         <input type="text" placeholder="Busca un título o una categoría" class="busctitulocat">
                         <button type="button" class="btn btn-dark ms-2">A-Z ↓</button>
@@ -43,97 +38,27 @@
                     <table class="table align-middle">
                         <thead></thead>
                         <tbody>
-                            <tr>
-                                <td class="d-flex align-items-center"><a th:href="@{/peliculas/1}"><img
-                                            th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula"
-                                            height="120px" width="84px" class="d-inline-block"></a></td>
-                                <td><a th:href="@{/peliculas/1}" class="text-dark bold">El buen patrón</a></td>
-                                <td>120 min</td>
-                                <td>Comedia</td>
-                                <td><a th:href="@{/compra-entradas}"><button type="button" class="btn btn-dark btn-sm ms-3">12:00</button></a>
-                                    <p class="mt-2">10 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">15:00</button>
-                                    <p class="mt-2">7 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2" disabled>18:00</button>
-                                    <p class="mt-2 text-danger bold">AGOTADO</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">21:00</button>
-                                    <p class="mt-2 text-danger bold">2 butacas</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="d-flex align-items-center"><img th:src="@{/img/Delicioso-886756010-mmed.jpg}"
-                                        src="/img/Delicioso-886756010-mmed.jpg" alt="imagen pelicula" height="120px"
-                                        width="84px" class="d-inline-block"></td>
-                                <td><a th:href="@{/peliculas/2}" class="text-dark bold">Delicioso</a></td>
-                                <td>112 min</td>
-                                <td>Comedia-Historia</td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-3">15:00</button>
-                                    <p class="mt-2">6 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">18:00</button>
-                                    <p class="mt-2 text-danger bold">1 butaca</p>
-                                </td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td class="d-flex align-items-center"><img th:src="@{/img/Belfast-622346571-large.jpg}"
-                                        src="/img/Belfast-622346571-large.jpg" alt="imagen pelicula" height="120px"
-                                        width="84px" class="d-inline-block"></td>
-                                <td><a th:href="@{/peliculas/3}" class="text-dark bold">Belfast</a></td>
-                                <td>97 min</td>
-                                <td>Drama</td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-3">14:00</button>
-                                    <p class="mt-2">5 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">19:00</button>
-                                    <p class="mt-2">4 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2" disabled>22:00</button>
-                                    <p class="mt-2 text-danger bold">AGOTADO</p>
-                                </td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td class="d-flex align-items-center"><img th:src="@{/img/Encanto-153413687-large.jpg}"
-                                        src="/img/Encanto-153413687-large.jpg" alt="imagen pelicula" height="120px"
-                                        width="84px" class="d-inline-block"></td>
-                                <td><a th:href="@{/peliculas/4}" class="text-dark bold">Encanto</a></td>
-                                <td>110 min</td>
-                                <td>Animación-Aventura</td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-3">11:00</button>
-                                    <p class="mt-2">15 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">14:00</button>
-                                    <p class="mt-2">9 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">17:00</button>
-                                    <p class="mt-2 text-danger bold">2 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">20:00</button>
-                                    <p class="mt-2">5 butacas</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="d-flex align-items-center"><img th:src="@{/img/Moonfall-138176660-large.jpg}"
-                                        src="/img/Moonfall-138176660-large.jpg" alt="imagen pelicula" height="120px"
-                                        width="84px" class="d-inline-block"></td>
-                                <td><a th:href="@{/peliculas/5}" class="text-dark bold">Moonfall</a></td>
-                                <td>120 min</td>
-                                <td>Ciencia-ficción</td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">12:00</button>
-                                    <p class="mt-2">3 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">15:00</button>
-                                    <p class="mt-2">6 butacas</p>
-                                </td>
-                                <td><button type="button" class="btn btn-dark btn-sm ms-2">21:00</button>
-                                    <p class="mt-2">9 butacas</p>
-                                </td>
-                                <td></td>
+                            <tr th:each="sesion : ${sesiones}">
+                                <td class="d-flex align-items-center"><a
+                                        th:href="@{/peliculas/{id}(id=${sesion.id})}"><img
+                                            th:src="@{/img/{id}(id=${sesion.img})}" src="/img/img1.jpg"
+                                            alt="imagen pelicula" height="120px" width="84px"
+                                            class="d-inline-block"></a></td>
+                                <td><a th:href="@{/peliculas/{id}(id=${sesion.id})}" th:text="${sesion.titulo}"
+                                        class="text-dark bold">El buen patrón</a></td>
+                                <td th:text="${sesion.duraccion + ' min'}">120 min</td>
+                                <td th:text="${sesion.genero}">Comedia</td>
+                                <th:block th:each="pase : ${sesion.sesiones}">
+                                    <td>
+                                        <a th:href="@{/compra-entradas?pase={p}(p=${pase.id})}">
+                                            <button type="button" class="btn btn-dark btn-sm ms-3" th:if="${pase.dia_hora.minute &lt; 10}" th:text="${pase.dia_hora.hour + ':0' + pase.dia_hora.minute}">12:00</button>
+                                            <button type="button" class="btn btn-dark btn-sm ms-3" th:unless="${pase.dia_hora.minute &lt; 10}" th:text="${pase.dia_hora.hour + ':' + pase.dia_hora.minute}">12:00</button>
+                                        </a>
+                                        <p class="mt-2 text-danger bold" th:if="${pase.asientosLibres == 0}">AGOTADO</p>
+                                        <p class="mt-2 text-danger bold" th:if="${pase.asientosLibres &lt; 3 && pase.asientosLibres &gt; 0}" th:text="${pase.asientosLibres + ' butacas'}">2 butacas</p>
+                                        <p class="mt-2" th:if="${pase.asientosLibres &gt; 2}" th:text="${pase.asientosLibres + ' butacas'}">10 butacas</p>
+                                    </td>
+                                </th:block>
                             </tr>
                         </tbody>
                     </table>
