--- a/src/main/resources/templates/compraEntradas.html
+++ b/src/main/resources/templates/compraEntradas.html
@@ -12,12 +12,13 @@
     <main class="flex-shrink-0">
         <div class="container">
             <form action="/compra-entradas">
-                <h1 class="mt-5">El buen patrón - Sesión de las 12:00</h1>
+                <h1 th:if="${sesion.dia_hora.minute &lt; 10}" th:text="${sesion.pelicula.titulo + '- Sesión de las ' + sesion.dia_hora.hour + ':0' + sesion.dia_hora.minute}" class="mt-5">El buen patrón - Sesión de las 12:00</h1>
+                <h1 th:unless="${sesion.dia_hora.minute &lt; 10}" th:text="${sesion.pelicula.titulo + '- Sesión de las ' + sesion.dia_hora.hour + ':' + sesion.dia_hora.minute}" class="mt-5">El buen patrón - Sesión de las 12:00</h1>
                 <div class="d-flex align-items-center mt-5">
                     <div class="d-flex flex-column ">
-                        <h5 class="">Día: 15/03/22</h6>
-                        <h5 class="">Cine: La Gavia</h6>
-                        <h5 class="">Sala 1</h6>
+                        <h5 th:text="${'Día: ' + #temporals.format(sesion.dia_hora, 'dd-MM-yy')}" class="">Día: 15/03/22</h5>
+                        <h5 th:text="${'Cine: ' + sesion.cine.nombre}" class="">Cine: La Gavia</h5>
+                        <h5 th:text="${sesion.sala.nombre}"class="">Sala 1</h5>
                         <h6 class="mb-3">Precio entrada: <span id="precioentrada">11.50</span>€</h6>
                         <div class="d-flex mb-4">
                             <button type="button" class="btn btn-dark botoncantidad me-2" id="botonmas" onclick="botonmass()">+</button>
