Compra de entradas funcionando

--- a/src/main/resources/templates/compraEntradas.html
+++ b/src/main/resources/templates/compraEntradas.html
@@ -11,7 +11,7 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <form action="/compra-entradas">
+            <form method="POST" action="/entradas/compra-entradas/2" onsubmit="enviarAsientos(event);">
                 <h1 th:if="${sesion.dia_hora.minute &lt; 10}" th:text="${sesion.pelicula.titulo + ' - Sesión de las ' + sesion.dia_hora.hour + ':0' + sesion.dia_hora.minute}" class="mt-5">El buen patrón - Sesión de las 12:00</h1>
                 <h1 th:unless="${sesion.dia_hora.minute &lt; 10}" th:text="${sesion.pelicula.titulo + '- Sesión de las ' + sesion.dia_hora.hour + ':' + sesion.dia_hora.minute}" class="mt-5">El buen patrón - Sesión de las 12:00</h1>
                 <div class="d-flex align-items-center mt-5">
@@ -65,7 +65,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center"><a th:href="@{/entradas/1}"><button type="button" class="btn btn-dark btn-lg mt-5">Comprar</button></a> </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-dark btn-lg mt-5">Comprar</button>
+                </div>
             </form>
         </div>
     </main>
