--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -17,14 +17,27 @@
                     <h2 class="mt-5 mb-5">Información de <span th:text="${user.username}">Paco</span></h2>
                     <div class="d-flex align-items-center">
                         <img width="240px" height="326px" th:src="@{/user/{id}/pic(id=${session.u.id})}">
-                        <form class="d-flex flex-column ms-5">
-                            <input type="text" class="form-control mb-2" placeholder="Nombre" name="nombre">
-                            <input type="text" class="form-control mb-2" placeholder="Apellidos" name="apellidos">
-                            <input type="email" class="form-control mb-2" id="email" placeholder="correo@filmadmin.es" name="email">
-                            <input type="date" class="form-control mb-2" name="fecha">
-                            <input class="form-control" type="file" id="userimg" name="imagen" accept="image/*">
-                            <button type="submit" class="btn btn-dark mt-3">Editar Información</button>
-                        </form>
+                        <div id="forms">
+                            <form method="POST" onsubmit="enviarUser(event)" class="d-flex flex-column ms-5" id="forminfouser">
+                                <input type="text" class="form-control mb-2" placeholder="Nombre" id="firstName" name="firstName" th:if="${user.firstName != null}" th:value="${user.firstName}">
+                                <input type="text" class="form-control mb-2" placeholder="Nombre" id="firstName" name="firstName" th:unless="${user.firstName != null}">
+
+                                <input type="text" class="form-control mb-2" placeholder="Apellidos" id="lastName" name="lastName" th:if="${user.lastName != null}" th:value="${user.lastName}">
+                                <input type="text" class="form-control mb-2" placeholder="Apellidos" id="lastName" name="lastName" th:unless="${user.lastName != null}">
+
+                                <input type="email" class="form-control mb-2" id="email" placeholder="correo@filmadmin.es" name="email" th:if="${user.email != null}" th:value="${user.email}">
+                                <input type="email" class="form-control mb-2" id="email" placeholder="correo@filmadmin.es" name="email" th:unless="${user.email != null}">
+
+                                <input type="date" class="form-control mb-2" name="birthDate" id="birthDate" th:if="${user.birthDate != null}" th:value="${#temporals.format(user.birthDate, 'yyyy-MM-dd')}">
+                                <input type="date" class="form-control mb-2" name="birthDate" id="birthDate" th:unless="${user.birthDate != null}">
+
+                                <button type="submit" class="btn btn-dark mt-3">Editar Información</button>
+                            </form>
+                            <form method="POST" class="d-flex ms-5 mt-3" th:action="@{/user/{id}/pic(id=${session.u.id})}" enctype="multipart/form-data">
+                                <input class="form-control" type="file" id="userimg" name="photo" accept="image/*">
+                                <button type="submit" class="btn btn-dark ms-2">Editar Imagen</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
                 <div class="d-flex flex-column align-items-center panelder">
@@ -50,12 +63,22 @@
                         </table>
                     </div>
                     <h2 class="mt-5">Cambiar contraseña</h2>
-                    <form class="d-flex flex-column align-items-center">
+                    <form method="POST" onsubmit="enviarUser(event)" id="formpass" class="d-flex flex-column align-items-center">
                         <div class="d-flex mt-3">
-                            <input type="text" class="form-control mb-2" placeholder="Nueva contraseña" name="password">
-                            <input type="text" class="form-control ms-2 mb-2" id="passwordconfirm" placeholder="Repetir contraseña" name="passwordconfirm">   
+                            <input type="password" class="form-control mb-2" placeholder="Nueva contraseña" name="password" id="password">
+                            <input type="password" class="form-control ms-2 mb-2" id="pass2" placeholder="Repetir contraseña" name="pass2">   
                         </div>
-                        
+                        <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                            <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                            </symbol>
+                            <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+                              <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                            </symbol>
+                            <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                              <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                            </symbol>
+                        </svg>
                         <button type="submit" class="btn btn-dark mt-3">Cambiar contraseña</button>
                     </form>
                 </div>
@@ -92,6 +115,7 @@
             myInput.onpaste = e => e.preventDefault();
         }
     </script>
+    <script async type="text/javascript" th:src="@{/js/funcionesUser.js}"></script>
 </body>
 
 </html>
