Listado de administración con info BD

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -51,7 +51,7 @@
                                 </tr>
                                 <tr th:each="entrada : ${entradas}" th:unless="${#lists.isEmpty(entradas)}">
                                     <td th:text="${#lists.size(entrada.asientos) + ' asientos'}">10 asientos</td>
-                                    <td><a th:href="@{/peliculas/{id}(id=${entrada.sesion.pelicula.id})}" th:text="${entrada.sesion.pelicula.titulo}" class="text-dark bold">El buen patrón</a></td>
+                                    <td><a th:href="@{/user/{id}(id=${entrada.sesion.pelicula.id})}" th:text="${entrada.sesion.pelicula.titulo}" class="text-dark bold">El buen patrón</a></td>
                                     <td th:text="${#temporals.format(entrada.sesion.dia_hora, 'dd/MM/yy')}">01/03/22</td>
                                     <td th:if="${entrada.sesion.dia_hora.minute &lt; 10}" th:text="${entrada.sesion.dia_hora.hour + ':0' + entrada.sesion.dia_hora.minute}">21:00</td>
                                     <td th:unless="${entrada.sesion.dia_hora.minute &lt; 10}" th:text="${entrada.sesion.dia_hora.hour + ':' + entrada.sesion.dia_hora.minute}">21:00</td>
