--- a/src/main/resources/templates/compraEntradas.html
+++ b/src/main/resources/templates/compraEntradas.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-dark btn-lg mt-5">Comprar</button>
+                    <button type="submit" class="btn btn-dark btn-lg mt-5" id="botoncomprar" disabled>Comprar</button>
                 </div>
             </form>
         </div>
