--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -25,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item mx-3">
-                            <a class="nav-link text-light" th:href="@{/peliculas/}">Películas</a>
+                            <a class="nav-link text-light" id="nav-peliculas" th:href="@{/peliculas/}">Películas</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link text-light" th:href="@{/cines/}">Cines</a>
+                            <a class="nav-link text-light" id="nav-cines" th:href="@{/cines/}">Cines</a>
                         </li>
 
                         <th:block th:if="${session.u}">
